# suletta-fx

./: Cargo.toml  README.md
plugins/filter/: Cargo.toml
plugins/filter/src/: lib.rs
plugins/gain/: Cargo.toml
plugins/saturation/: Cargo.toml
plugins/saturation/src/: lib.rs
saturation/src/: lib.rs
src/: lib.rs
xtask/src/: main.rs
