[package]
name = "suletta-fx"
version = "0.0.2"
edition = "2021"
license = "GPL-3.0+"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fundsp = { git = "https://github.com/SamiPerttu/fundsp" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug" }

[workspace]
members = [
    "xtask",
    # plugins for distribution
    "plugins/gain"]
